# docvault

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COLLECTIONS_VS_TAGS.md  CONTEXTUAL_RETRIEVAL_ANALYSIS.md  KNOWLEDGE_GRAPH_ANALYSIS.md  LICENSE.md  MANIFEST.in  MCP_QA_REPORT.md  Makefile  PROJECT_RULES.md  README.md  TASKS.md  THREAT_MODEL.md  dv  dv-fast  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  uv.toml
.github/workflows/: e2e-tests.yml  tests.yml
docs/: CONFIGURATION.md  CONTENT_EXTRACTION.md  CONTEXTUAL_PROCESSING_TIPS.md  CONTEXTUAL_RETRIEVAL_ANALYSIS.md  MCP_QA_REPORT.md  PERFORMANCE.md  QUICK_START.md  README.md  SECTION_NAVIGATION.md  SET_OPENAI_KEY.md  THREAT_MODEL.md  USER_GUIDE.md  VECTOR_SEARCH_SUMMARIZATION_ANALYSIS.md  VERSION_MANAGEMENT.md
docvault/: config.py  main.py  project.py
docvault/cli/: cache_commands.py  collection_commands.py  commands.py  context_commands.py  credential_commands.py  freshness_commands.py  llms_commands.py  performance_commands.py  ref_commands.py  (+5 more)
examples/: demo_collections_and_tags.py  demo_contextual_retrieval.py  demo_search_combinations.py  demo_search_within_document.py  demo_smart_depth.py  demo_terminal_security.py
scripts/: analyze_scraping.py  build-package.sh  dev-setup.sh  dv  populate_registry.py  run-tests.sh  sql_audit.py  verify-install.py
tests/: README.md  README_TEST_IMPROVEMENTS.md  __init__.py  conftest.py  test_basic.py  test_batch_operations.py  test_cache_commands.py  test_caching.py  test_cli.py  test_cli_backup.py  test_cli_config.py  test_cli_document.py  test_cli_import.py  test_cli_import_deps.py  test_cli_index.py  test_cli_integration.py  test_cli_registry.py  test_cli_search.py  test_cli_search_v2.py  test_cli_serve.py  test_collections.py  test_content_extraction.py  test_context_features.py  test_db_operations.py  test_depth_analyzer.py  test_diagnostics.py  test_embeddings.py  test_export_command.py  test_freshness.py  test_library_manager.py  test_llms_txt.py  test_mcp_server.py  test_nextjs_extractor.py  test_performance.py  test_project_import.py  test_quick_add_commands.py  test_rate_limiter.py  test_schema.py  test_scraper.py  test_search_within_document.py  (+8 more)
(+81 files in other folders)
