[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docvault"
version = "0.1.0"
description = "Document management system with vector search and MCP integration for LLMs"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.md"}
authors = [
    {name = "DocVault Contributors"}
]
dependencies = [
    "click>=8.1.3",
    "rich>=13.3.1",
    "python-dotenv>=1.0.0",
    "requests>=2.28.1",
    "beautifulsoup4>=4.11.1",
    "html2text>=2020.1.16",
    "aiohttp>=3.8.4",
    "numpy>=1.24.0",
    "mcp-sdk>=0.1.0"
]

[project.scripts]
dv = "docvault.main:main"

[tool.hatch.build.targets.wheel]
packages = ["docvault"]

[tool.uv]
# UV-specific configuration options
python = "3.12"
resolver = "backtracking"
