[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["docvault"]
include-package-data = true

[project]
name = "docvault"
version = "0.1.0"
description = "Document management system with vector search and MCP integration for LLMs"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.md"}
authors = [
    {name = "DocVault Contributors"}
]
keywords = ["documentation", "vector search", "mcp", "llm", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Text Processing",
    "Topic :: Utilities"
]
dependencies = [
    "click>=8.1.3",
    "rich>=13.3.1",
    "python-dotenv>=1.0.0",
    "requests>=2.28.1",
    "beautifulsoup4>=4.11.1",
    "html2text>=2020.1.16",
    "aiohttp>=3.8.4",
    "numpy>=1.24.0",
    "mcp>=0.1.0",
    "sqlite-vec>=0.1.0"
]

[project.urls]
homepage = "https://github.com/yourusername/docvault"
repository = "https://github.com/yourusername/docvault.git"
documentation = "https://github.com/yourusername/docvault#readme"
issues = "https://github.com/yourusername/docvault/issues"

[project.scripts]
dv = "docvault.main:main"

